tests/marouter/errors/no_output_dir/errors.marouter
Error: Could not build output file 'blub/aggregated.xml' (No such file or directory).
Quitting (on error).
